@@ -6,10 +6,16 @@
  * @addtogroup Maintenance
  * @author Rob Church <robchur@gmail.com>
  */
- 
+
+$options = array( 'help', 'bureaucrat' );
 require_once( 'commandLine.inc' );
 
-if( !count( $args ) == 2 ) {
+if( isset( $options['help'] ) ) {
+	showHelp();
+	exit( 1 );
+}
+
+if( count( $args ) < 2 ) {
 	echo( "Please provide a username and password for the new account.\n" );
 	die( 1 );
 }
@@ -36,6 +42,8 @@ $user->setToken();
 
 # Promote user
 $user->addGroup( 'sysop' );
+if( isset( $option['bureaucrat'] ) )
+	$user->addGroup( 'bureaucrat' );
 
 # Increment site_stats.ss_users
 $ssu = new SiteStatsUpdate( 0, 0, 0, 0, 1 );
@@ -43,4 +51,17 @@ $ssu->doUpdate();
 
 echo( "done.\n" );
 
+function showHelp() {
+	echo( <<<EOT
+Create a new user account with administrator rights
 
+USAGE: php createAndPromote.php [--bureaucrat|--help] <username> <password>
+
+	--bureaucrat
+		Grant the account bureaucrat rights
+	--help
+		Show this help information
+
+EOT
+	);
+}
